add title to sharing options, update readme + pictures

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,17 +76,17 @@
                 </li>
                 <li class="panel anti-panel"><ul id="collapse-share-small" class="collapse {% block collapse_share_small %}{% endblock %}">
                     <li>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u={{share_url}}" target="popup"">
+                        <a href="https://www.facebook.com/sharer/sharer.php?u={{share_url}}" title="Share via Facebook" target="popup">
                             <i class="fa fa-facebook-square padding-small"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/share?url={{share_url}}" target="popup">
+                        <a href="https://plus.google.com/share?url={{share_url}}" title="Share via Google+" target="popup">
                             <i class="fa fa-google-plus padding-small"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-count="vertical" target="popup">
+                        <a href="https://twitter.com/share" class="twitter-share-button" data-count="vertical" title="Share via Twitter" target="popup">
                             <i class="fa fa-twitter-square padding-small"></i>
                         </a>
                     </li>
