--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
         </a>
     </li>
 {%- endmacro %}
+{% if article or page %}
+    {% set share_url = (SITEURL + '/' + (article.url if article else page.url)) %}
+{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -66,8 +69,6 @@
                 {{ nav_small_li(SITEURL + '/' + ARCHIVES_URL | default('archives.html'), 'Recent Articles', '<span class="glyphicon glyphicon-th-list"></span>') }}
                 
                 {% if SHARE and (article or page) %}
-                {% set share_url = SITEURL + '/' + (article.url if article else page.url) %}
-                
                 <li class="nav-divider"></li>
                 <li id="share-small">
                     <a data-toggle="collapse" data-parent="#accordion-small" href="#collapse-share-small" title="Share" class="collapsed">
@@ -162,8 +163,6 @@
                     </li>
                 {% endif %}
                 {% if SHARE and (article or page) %}
-                {% set share_url = SITEURL + (article.url if article else page.url) %}
-                
                 <li class="nav-divider"></li>
                 <li id="share">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse-share" title="Share" class="collapsed">
