move toggle button out of sidebar, should help out with issue 1

--- a/templates/base.html
+++ b/templates/base.html
@@ -292,13 +292,14 @@
                 </ul></li>
                 {% endif %}
             </ul>
-            <!-- open/close sidebar -->
-            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">
-                <span id="right-arrow" class="glyphicon glyphicon-chevron-right"  title="expand sidebar"></span>
-                <span id="left-arrow" class="glyphicon glyphicon-chevron-left" title="minimize sidebar"></span>
-            </a>
         </div>
         <!-- /#sidebar-wrapper -->
+        <!-- open/close sidebar -->
+        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">
+            <span id="right-arrow" class="glyphicon glyphicon-chevron-right"  title="expand sidebar"></span>
+            <span id="left-arrow" class="glyphicon glyphicon-chevron-left" title="minimize sidebar"></span>
+        </a>
+       <!-- /open/close sidebar -->
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
