--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,16 @@
 {% block title %}Welcome - {{ SITENAME }}{% endblock %}
 
 {% block precontent %}
-<section id="content" class="body">
-    <header class="page-header">
-        <h1 class="entry-title">Welcome to {{ SITENAME }}</h1>
-    </header>
-    <div class="entry-content">
-       This is a placeholder for an awesome landing page, for now, why don't you take a look at something else?
+<div class="row">
+    <div class="col-lg-12">
+        <section id="content" class="body">
+            <header class="page-header">
+                <h1 class="entry-title">Welcome to {{ SITENAME }}</h1>
+            </header>
+            <div class="entry-content">
+               This is a placeholder for an awesome landing page, for now, why don't you take a look at something else?
+            </div>
+        </section>
     </div>
-</section>
+</div>
 {% endblock %}
