--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,7 +1,11 @@
 {% extends "include/article_list.html" %}
 {% block title %}Recent Articles - {{ SITENAME }}{% endblock %}
-{% block precontent %}
-    <header class="page-header">
-        <h1>Recent Articles</h1>
-    </header>
+{% block pageheader %}
+<div class="row">
+    <div class="col-lg-12">
+        <header class="page-header">
+            <h1>Recent Articles</h1>
+        </header>
+    </div>
+</div>
 {% endblock %}
