--- a/templates/category.html
+++ b/templates/category.html
@@ -8,7 +8,11 @@
 {% block collapse_categories %}in{% endblock %}
 
 {% block precontent %}
-    <header class="page-header">
-        <h1>Latest Articles in {{ category }}</h1>
-    </header>
+<div class="row">
+    <div class="col-lg-12">
+        <header class="page-header">
+            <h1>Latest Articles in {{ category }}</h1>
+        </header>
+    </div>
+</div>
 {% endblock %}
