--- a/templates/page.html
+++ b/templates/page.html
@@ -46,16 +46,20 @@
 {% endblock %}
 
 {% block content %}
-    <section id="content" class="body">
-        <h1 class="page-header">{{ page.title }}</h1>
-        {% if PDF_PROCESSOR %}
-            <a href="{{ SITEURL }}/pdf/{{ page.slug }}.pdf">
-                get the pdf
-            </a>
-        {% endif %}
-        <div class="entry-content">
-            {{ page.content }}
-        </div>
-    </section>
+<div class="row">
+    <div class="col-lg-12">
+        <section id="content" class="body">
+            <h1 class="page-header">{{ page.title }}</h1>
+            {% if PDF_PROCESSOR %}
+                <a href="{{ SITEURL }}/pdf/{{ page.slug }}.pdf">
+                    get the pdf
+                </a>
+            {% endif %}
+            <div class="entry-content">
+                {{ page.content }}
+            </div>
+        </section>
+    </div>
+</div>
 {% endblock %}
 
