--- a/templates/tags.html
+++ b/templates/tags.html
@@ -7,7 +7,11 @@
 {% block collapse_tags %}in{% endblock %}
 
 {% block precontent %}
-    <header class="page-header">
-        <h1>Latest Articles featuring {{ tag }}</h1>
-    </header>
+<div class="row">
+    <div class="col-lg-12">
+        <header class="page-header">
+            <h1>Latest Articles featuring {{ tag }}</h1>
+        </header>
+    </div>
+</div>
 {% endblock %}
