add back to top to base sidebar small

--- a/templates/base.html
+++ b/templates/base.html
@@ -114,6 +114,8 @@
                 {% endfor %}
                 </ul></li>
                 {% endif %}
+                <li class="nav-divider"></li>
+                {{ nav_small_li('#', 'Back to top', '<span class="fa fa-arrow-up"></span>') }}
             </ul>
         </div>
         <div id="sidebar-wrapper">
