--- a/templates/article.html
+++ b/templates/article.html
@@ -54,7 +54,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-{% if article.toc %}9{% else %}12{% endif %}">
         <section id="content">
             <article>
                 <header class="page-header">
@@ -79,5 +79,10 @@
             </article>
         </section>
     </div>
+    {% if article.toc %}
+    <div class="col-lg-3">
+        {{article.toc}}
+    </div>
+    {% endif %}
 </div>
 {% endblock %}
