--- a/static/css/pelican-twitchy.css
+++ b/static/css/pelican-twitchy.css
@@ -224,12 +224,16 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
     background: #f5f5f5;
 }
 
-/*TODO improve*/
-.entry-content img{
-    display: block;
-    margin: 0 auto;
-    padding: 10px;
+#toc {
+    position: fixed;
 }
+
+#toc>ul{
+    list-style: none;
+    padding-left: 0px;
+    padding-right: 20px;
+}
+
 
 .anti-panel{
     margin-bottom: 0px;
