--- a/templates/article.html
+++ b/templates/article.html
@@ -53,10 +53,10 @@
 {% block collapse_latest %}in{% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col-lg-{% if article.toc %}9{% else %}12{% endif %}">
-        <section id="content">
-            <article>
+<section id="content">
+    <article>
+        <div class="row">
+            <div class="col-lg-12">
                 <header class="page-header">
                     <h1>
                         <a href="{{ SITEURL }}/{{ article.url }}"
@@ -69,6 +69,10 @@
                         </small>
                     </h1>
                 </header>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-{% if article.toc %}9{% else %}12{% endif %}">
                 <div class="entry-content">
                     {{ article.content }}
                 </div>
@@ -76,13 +80,14 @@
                     <p>- {{article.author}}</p>
                 </footer>
                 {% include 'include/comments.html' %}
-            </article>
-        </section>
-    </div>
-    {% if article.toc %}
-    <div class="col-lg-3">
-        {{article.toc}}
-    </div>
-    {% endif %}
-</div>
+            </div>
+            {% if article.toc %}
+            <div class="col-lg-3 hidden-xs hidden-sm">
+                {{article.toc}}
+            </div>
+            {% endif %}
+        </div>
+    </article>
+</section>
+
 {% endblock %}
