--- a/static/css/pelican-twitchy.css
+++ b/static/css/pelican-twitchy.css
@@ -224,8 +224,10 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
     background: #f5f5f5;
 }
 
-#toc {
-    position: fixed;
+.affix {
+    top: 10px;
+    right: 0px;
+    width: 370px
 }
 
 #toc>ul{
@@ -233,7 +235,6 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
     padding-left: 0px;
     padding-right: 20px;
 }
-
 
 .anti-panel{
     margin-bottom: 0px;
