--- a/static/css/pelican-twitchy.css
+++ b/static/css/pelican-twitchy.css
@@ -225,15 +225,47 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
 }
 
 .affix {
-    top: 10px;
-    right: 0px;
-    width: 370px
+    display: none;
+    position: fixed;
+    top: 20px;
 }
 
-#toc>ul{
+#toc{
+    width: 220px;
+    padding-left: 20px;
+}
+
+#toc a {
+    color: #999;
+    text-decoration: none;
+}
+
+#toc ul{
     list-style: none;
     padding-left: 0px;
-    padding-right: 20px;
+}
+
+#toc ul>li{
+    padding-left:10px;
+}
+
+#toc ul>li.active{
+    padding-left:9px;
+    border-left: 1px solid #93c54b;
+}
+#toc li.active>a{
+    color: #93c54b;
+    /*font-weight: bold;*/
+}
+
+#toc ul>li:hover{
+    padding-left: 8px;
+    border-left: 2px solid #93c54b;
+}
+
+#toc a:hover{
+    color: #93c54b;
+    text-decoration: none;
 }
 
 .anti-panel{
@@ -241,7 +273,20 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
     background-color: #272724;
     border: 0px;
     -webkit-box-shadow: 0 0 0 0;
-    box-shadow 0 0 0 0;
+    box-shadow: 0 0 0 0;
+}
+
+.container-carousel{
+    width: 100%;
+    height: 400px;
+}
+
+.container-carousel-one{
+    background-color: yellow;
+}
+
+.container-carousel-two{
+    background-color: blue;
 }
 
 @media(min-width:768px) {
@@ -291,5 +336,12 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
     }
     #wrapper.toggled #menu-toggle #left-arrow{
         display: none;
+    }
+    
+}
+
+@media(min-width:1200px) {
+    .affix{
+        display: inline;
     }
 }
