add lazy loading for disqus

--- a/templates/article.html
+++ b/templates/article.html
@@ -85,5 +85,8 @@
         </div>
     </article>
 </section>
+{% endblock %}
 
+{% block scripts %}
+    {% include 'include/comments_scripts.html' %}
 {% endblock %}
