--- a/templates/base.html
+++ b/templates/base.html
@@ -305,7 +305,7 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <div class="container-fluid">
+            <div class="container">
                 {% block precontent %}
                 {% endblock %}
                 {% block content %}
