--- a/static/css/pelican-twitchy.css
+++ b/static/css/pelican-twitchy.css
@@ -49,11 +49,8 @@
 }
 
 #page-content-wrapper {
-    /*
-    position: relative;
-    z-index: 1;
-    */
     width: 100%;
+    height: 100%;
     padding: 15px;
     margin-right: -40px;
 }
@@ -116,6 +113,13 @@
     text-decoration: none;
     color: #fff;
     background: rgba(255,255,255,0.2);
+    /*
+    -o-transition:.3s;
+    -ms-transition:.3s;
+    -moz-transition:.3s;
+    -webkit-transition:.3s;
+    transition:.3s;
+    */
 }
 
 .sidebar-nav li a:active,
@@ -170,6 +174,19 @@ ul.sidebar_submenu>li>a>i.padding-small{
     position: relative;
     top: 11px;
     right: 11px;
+}
+
+.centerimage{
+    display: block;
+    margin: 0 auto;
+}
+
+.jumbotron h1{
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+.jumbotron p:last-child{
+    margin-bottom: 0px;
 }
 
 #menu-toggle {
@@ -304,6 +321,7 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
 #carousel-content .nav {
     background: #eee;
 }
+
 .nav-justified > li > a {
     border-radius: 0px;
 }
