--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,7 +1,7 @@
 {% extends "include/article_list.html" %}
 {% block title %}Recent Articles - {{ SITENAME }}{% endblock %}
 
-{% block pageheader %}
+{% block precontent %}
 <div class="row">
     <div class="col-lg-12">
         <header class="page-header">
