--- a/templates/include/article_info.html
+++ b/templates/include/article_info.html
@@ -1,19 +1,21 @@
-<footer class="post-info">
-    <div id="publish-info" class="publish-info-block">
-        <span class="published">
-            <i class="fa fa-calendar padding-small"></i><time datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }}</time>
-        </span>
-        <span class="category">
-            <i class="fa fa-folder-open padding-small"></i><a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
-        </span>
-        {% if article.tags %}
-        <span class="tags">
-            <i class="fa fa-tags padding-small"></i>
-        {% for tag in article.tags %}
-            <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>{% if not loop.last %} / {% endif %}
-        {% endfor %}
-        </span>
-        {% endif %}
+<div class="post-info">
+    <div class="publish-info-block">
+        <small>
+            <span class="published">
+                <i class="fa fa-calendar padding-small"></i><time datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }}</time>
+            </span>
+            <span class="category">
+                <i class="fa fa-folder-open padding-small"></i><a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
+            </span>
+            {% if article.tags %}
+            <span class="tags">
+                <i class="fa fa-tags padding-small"></i>
+            {% for tag in article.tags %}
+                <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>{% if not loop.last %} / {% endif %}
+            {% endfor %}
+            </span>
+            {% endif %}
+        </small>
     </div>
     {% if PDF_PROCESSOR %}
     <div id="pdf-info" class="publish-info-block">
@@ -22,4 +24,4 @@
         </span>
     </div>
     {% endif %}
-</footer><!-- /.post-info -->
+</div><!-- /.post-info -->
