disable custom pre background for better readability

--- a/static/css/pelican-twitchy.css
+++ b/static/css/pelican-twitchy.css
@@ -243,10 +243,11 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
     display: inline-block;
     margin-top: 10px;
 }
-
+/*
 .highlight pre, .highlighttable pre {
     background: #f5f5f5;
 }
+*/
 
 .affix {
     display: none;
