correct link in footer

--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -7,7 +7,7 @@
                 {{SITESUBTITLE}}
             </div>
             <div class="col-xs-8 text-right">
-                <p>Built using <a href="http://docs.getpelican.com/en/latest">Pelican</a>, <a href="getbootstrap.com">Bootstrap3</a> and the <a href="https://github.com/ingwinlu/pelican-twitchy">pelican-twitchy</a> theme.</p>
+                <p>Built using <a href="http://docs.getpelican.com/en/latest">Pelican</a>, <a href="http://getbootstrap.com">Bootstrap3</a> and the <a href="https://github.com/ingwinlu/pelican-twitchy">pelican-twitchy</a> theme.</p>
                 <p>&copy; {{ copy_date }} {{ AUTHOR }}</p>
             </div>
         </div>
