--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -11,12 +11,13 @@
                 <p>&copy; {{ copy_date }} {{ AUTHOR }}</p>
             </div>
         </div>
-        {#
         <div class="row">
             <div class="col-xs-12 text-center">
-                <a href="#"><i class="fa fa-arrow-up"></i> Back to top</a>
+              {%- if CC_LICENSE or CC_LICENSE_DERIVATIVES or CC_LICENSE_COMMERCIAL %}
+              {% from 'include/cc-license.html' import cc_license_mark %}
+                <p><small>{{ cc_license_mark(cc_name=CC_LICENSE,derivatives=CC_LICENSE_DERIVATIVES,commercial=CC_LICENSE_COMMERCIAL,attr_markup=CC_ATTR_MARKUP,attr_props={'title':SITENAME,'name':article.author if article else AUTHOR,'url':SITEURL}) }}</small></p>
+              {% endif %}
             </div>
         </div>
-        #}
     </div>
 </footer>
