--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -4,18 +4,17 @@
         <hr>
         <div class="row">
             <div class="col-xs-4 text-left">
-                {{SITESUBTITLE}}
+                <small>{{SITESUBTITLE}}</small>
             </div>
             <div class="col-xs-8 text-right">
-                <p>Built using <a href="http://docs.getpelican.com/en/latest">Pelican</a>, <a href="http://getbootstrap.com">Bootstrap3</a> and the <a href="https://github.com/ingwinlu/pelican-twitchy">pelican-twitchy</a> theme.</p>
-                <p>&copy; {{ copy_date }} {{ AUTHOR }}</p>
+                <p><small>Built using <a href="http://docs.getpelican.com/en/latest">Pelican</a>, <a href="http://getbootstrap.com">Bootstrap3</a> and the <a href="https://github.com/ingwinlu/pelican-twitchy">pelican-twitchy</a> theme.</small></p>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="footer_license">
             <div class="col-xs-12 text-center">
               {%- if CC_LICENSE or CC_LICENSE_DERIVATIVES or CC_LICENSE_COMMERCIAL %}
               {% from 'include/cc-license.html' import cc_license_mark %}
-                <p><small>{{ cc_license_mark(cc_name=CC_LICENSE,derivatives=CC_LICENSE_DERIVATIVES,commercial=CC_LICENSE_COMMERCIAL,attr_markup=CC_ATTR_MARKUP,attr_props={'title':SITENAME,'name':article.author if article else AUTHOR,'url':SITEURL}) }}</small></p>
+                <p><small>{{ cc_license_mark(cc_name=CC_LICENSE,derivatives=CC_LICENSE_DERIVATIVES,commercial=CC_LICENSE_COMMERCIAL,attr_markup=CC_ATTR_MARKUP,attr_props={'title':SITENAME,'name':article.author if article else AUTHOR,'url':SITEURL}) }}<small></p>
               {% endif %}
             </div>
         </div>
