--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -16,6 +16,7 @@
               {% from 'include/cc-license.html' import cc_license_mark %}
                 <p><small>{{ cc_license_mark(cc_name=CC_LICENSE,derivatives=CC_LICENSE_DERIVATIVES,commercial=CC_LICENSE_COMMERCIAL,attr_markup=CC_ATTR_MARKUP,attr_props={'title':SITENAME,'name':article.author if article else AUTHOR,'url':SITEURL}) }}<small></p>
               {% endif %}
+                <p><small><p>&copy; {{ copy_date }} {{ AUTHOR }}</p></small></p>
             </div>
         </div>
     </div>
