--- a/templates/base.html
+++ b/templates/base.html
@@ -41,18 +41,18 @@
     <title>{% block title %}{{ SITENAME }}{% endblock %}</title>
 
     {% if BOOTSTRAP_THEME %}
-        <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.{{ BOOTSTRAP_THEME }}.min.css" type="text/css"/>
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.{{ BOOTSTRAP_THEME }}.min.css" type="text/css"/>
     {% else %}
-        <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.min.css" type="text/css"/>
     {% endif %}
     <link href="{{ SITEURL }}/theme/css/font-awesome.min.css" rel="stylesheet">
     
     <link href="{{ SITEURL }}/theme/css/pygments/{{ PYGMENTS_STYLE|default('native') }}.css" rel="stylesheet">
     
     {% if TYPOGRIFY %}
-        <link href="{{ SITEURL }}/theme/css/typogrify.css" rel="stylesheet">
+    <link href="{{ SITEURL }}/theme/css/typogrify.css" rel="stylesheet">
     {% endif %}
-    <link href="{{ SITEURL }}/theme/css/pelican-twitchy.css" rel="stylesheet">
+    <link href="{{ SITEURL }}/theme/css/pelican-twitchy.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -316,12 +316,12 @@
         <!-- /#page-content-wrapper -->
     </div>
     <!-- /#wrapper -->
-    <!-- jQuery Version 1.11.0 -->
-    <script src="{{ SITEURL }}/theme/js/jquery-1.11.0.js"></script>
+    <!-- jQuery Version 1.11.2 -->
+    <script src="{{ SITEURL }}/theme/js/jquery-1.11.2.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="{{ SITEURL }}/theme/js/bootstrap.min.js"></script>
     <!-- twitchy Script -->
-    <script src="{{ SITEURL }}/theme/js/pelican_twitchy.js"></script>
+    <script src="{{ SITEURL }}/theme/js/pelican_twitchy.min.js"></script>
     {% include 'include/ga.html' %}
     {% block scripts %}
     {% endblock %}
