Adding the ability to add custom CSS

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,9 @@
         <link href="{{ SITEURL }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate"
               title="{{ SITENAME }} RSS Feed"/>
     {% endif %}
+    {% if CUSTOM_CSS %}
+        <link href="{{ SITEURL }}/{{ CUSTOM_CSS }}" rel="stylesheet">
+    {% endif %}
 </head>
 <body data-spy="scroll" data-target="#scrollspy">
     <div id="wrapper">
