add rule to center responsive images in content

--- a/static/css/pelican-twitchy.css
+++ b/static/css/pelican-twitchy.css
@@ -257,6 +257,10 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
     color: #3e3f3a;
 }
 
+/*center responsive images in content*/
+#content img.img-responsive{
+    margin: 0px auto;
+}
 
 .affix {
     display: none;
