--- a/templates/archives.html
+++ b/templates/archives.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-lg-9">
         <header class="page-header">
-            <h1>Recent Articles</h1>
+            <h1>Archive</h1>
         </header>
     </div>
 </div>
