--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "include/article_list.html" %}
+{% extends "base.html" %}
 {% block title %}Welcome - {{ SITENAME }}{% endblock %}
 
 {% block canonical_rel %}
@@ -14,7 +14,7 @@
             <div class="jumbotron">  
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Welcome - {{ SITENAME }}</h1>
+                        <h1>{{ SITENAME }}</h1>
                         <p>{{ SITESUBTITLE }}</p>
                     </div>
                 </div>
@@ -23,9 +23,56 @@
     </div>
     <div class="row">
         <div class="col-lg-9">
-            <h2>Latest Articles:</h2>
+            <h2>Recent Articles:</h2>
         </div>
     </div>
 </section>
 {% endblock %}
+
+{% block content %}
+<div class="row">
+    <div class="col-lg-9">
+    {% if articles %}
+        {% for article in (all_articles if all_articles else articles)[:RECENT_POST_COUNT] %}
+            <article>
+                <h2>
+                    <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
+                    {% include "include/article_info.html" %}
+                </h2>
+                <div class="summary">
+                    {{ article.summary }}
+                </div>
+            </article>
+            {% if not loop.last %}
+            <hr/>
+            {% endif %}
+        {% endfor %}
+    <a class="btn btn-default btn-xs pull-right twitchy-background" href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">
+        View all Articles ...
+    </a>
+    {% endif %}
+    </div>
+</div>
+{% endblock %}
+
+{% block scripts %}
+<script>
+    function FadeInOnScroll(ObjectList){
+        ObjectList.each(function(i) {
+            var bottom_of_object = $(this).position().top + $(this).outerHeight();
+            var bottom_of_window = $(window).scrollTop() + $(window).height();
+
+            if( bottom_of_window > bottom_of_object ){
+                $(this).fadeTo(750,1);
+            }
+        });
+    }
+    articles = $("article").fadeTo(0, 0.05);
+    FadeInOnScroll(articles)
+    $(window).scroll(function() {
+        FadeInOnScroll(articles)
+    });
+</script>
+{% endblock %}
+
 
