--- a/templates/category.html
+++ b/templates/category.html
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-lg-9">
         <header class="page-header">
-            <h1>Latest Articles in {{ category }}</h1>
+            <h1>Articles in {{ category }}</h1>
         </header>
     </div>
 </div>
