remove welcome from index title

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Welcome - {{ SITENAME }}{% endblock %}
+{% block title %}{{ SITENAME }}{% endblock %}
 
 {% block canonical_rel %}
 <link rel="canonical" href="{{ SITEURL }}">
