--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -1,23 +1,18 @@
 {% set copy_date = (all_articles[0].date.strftime('%Y') if all_articles else articles[0].date.strftime('%Y')) %}
 <footer>
-    <div class="container-fluid">
-        <hr>
-        <div class="row">
-            <div class="col-xs-3 text-left">
-                <small>{{SITESUBTITLE}}</small>
-            </div>
-            <div class="col-xs-6 text-right">
-                <p><small>Built using <a href="http://docs.getpelican.com/en/latest">Pelican</a>, <a href="http://getbootstrap.com">Bootstrap3</a> and the <a href="https://github.com/ingwinlu/pelican-twitchy">pelican-twitchy</a> theme.</small></p>
-            </div>
-        </div>
-        <div class="row" id="footer_license">
-            <div class="col-xs-9 text-center">
-              {%- if CC_LICENSE or CC_LICENSE_DERIVATIVES or CC_LICENSE_COMMERCIAL %}
-              {% from 'include/cc-license.html' import cc_license_mark %}
-                <p><small>{{ cc_license_mark(cc_name=CC_LICENSE,derivatives=CC_LICENSE_DERIVATIVES,commercial=CC_LICENSE_COMMERCIAL,attr_markup=CC_ATTR_MARKUP,attr_props={'title':SITENAME,'name':article.author if article else AUTHOR,'url':SITEURL}) }}</small></p>
-              {% endif %}
-                <p><small><p>&copy; {{ copy_date }} {{ AUTHOR }}</p></small></p>
-            </div>
+    <hr>
+    <div class="row">
+        <div class="col-lg-9 text-center">
+            <p><small>
+                Built by <a href="http://docs.getpelican.com/en/latest">Pelican</a> / <a href="https://github.com/ingwinlu/pelican-twitchy">pelican-twitchy</a>
+                &middot;
+                {%- if CC_LICENSE or CC_LICENSE_DERIVATIVES or CC_LICENSE_COMMERCIAL %}
+                {% from 'include/cc-license.html' import cc_license_mark %}
+                    {{ cc_license_mark(cc_name=CC_LICENSE,derivatives=CC_LICENSE_DERIVATIVES,commercial=CC_LICENSE_COMMERCIAL,attr_markup=CC_ATTR_MARKUP,attr_props={'title':SITENAME,'name':article.author if article else AUTHOR,'url':SITEURL}) }}
+                {% else %}
+                    &copy; {{ copy_date }} {{ AUTHOR }}
+                {% endif %}
+            </small></p>
         </div>
     </div>
 </footer>
