display category in article_lists

--- a/templates/include/article_list.html
+++ b/templates/include/article_list.html
@@ -8,6 +8,7 @@
             <article>
                 <h4>
                     <time datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }}</time>
+                    [<a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>]
                     <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
                 </h4>
             </article>
